Centralização dos textos da tabela da página comprar, utilizando text-align center :bug:

--- a/semana3/bugfixes/index.css
+++ b/semana3/bugfixes/index.css
@@ -102,6 +102,7 @@ div>div{
 
 table {
     width: 60%;
+    text-align: center;
 }
 
 td button {
